# Outdoor_imu_bno055

./: README.md
imu_bno055/: CMakeLists.txt  package.xml
imu_bno055/config/: default_imu_bno055_params.yaml  default_muppet_imu_bno055_params.yaml
imu_bno055/include/: smbus_functions.h
imu_bno055/include/imu_bno055/: bno055_i2c_activity.h
imu_bno055/launch/: imu.launch.py
imu_bno055/src/: bno055_i2c_activity.cpp  bno055_i2c_node.cpp  watchdog.cpp
