<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>imu_bno055</name>
  <version>1.0.0</version>
  <description>I2C driver for a BNO055 IMU. Tested on Jetson TX2.</description>
  <maintainer email="dheera@dheera.net">dheera</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
